--- a/site/src/pages/common/Card/card.scss
+++ b/site/src/pages/common/Card/card.scss
@@ -73,7 +73,6 @@ svg {
 .card-lnk {
   height: 20px;
   width: 20px;
-  border: 1px solid red;
 }
 
 /*Hover*/
