--- a/site/src/pages/common/Header/header.scss
+++ b/site/src/pages/common/Header/header.scss
@@ -193,9 +193,8 @@
   justify-content: center;
   background-color: #6952e0;
   border-radius: 100%;
-  border: 1px solid red;
-  height: 80%;
-  width: 40%;
+  height: 90%;
+  width: 50%;
 }
 .selecionado{
   border: none;
