--- a/site/src/pages/feed/style.scss
+++ b/site/src/pages/feed/style.scss
@@ -13,12 +13,11 @@
 .sec-cards {
   flex-wrap: wrap ;
   display: flex;
-  width: 92vw;
-  justify-content: space-around;
+  width: 90vw;
+  justify-content: center;
   margin-top: 5em;
   height: 40vh;
   align-items: flex-start;
-  flex-wrap: wrap;
 }
 .titulo {
   margin-left: 10vw;
